--- a/body/ML/classic.tex
+++ b/body/ML/classic.tex
@@ -240,6 +240,20 @@ Decision Tree, 是一种基本的分类与回归方法, 基于树形结构来进
 
 \subsection{GBDT}
 
+\subsection{随机森林}
+听名字就知道咋回事了: 很多棵决策树组成的学习器, 不过随机俩字何解呢? RF 的基本流程:
+\begin{itemize}
+	\item 给定数据集 $\mathcal{D}  = \{(x_i, y_i)\}_{i=1}^n$, 设置停止条件;
+	
+	\item 按照有放回抽样选择 $n$ 个样本, 作为当前决策树的训练集, 在每个结点分裂时随机选择 $p$ 个特征作为候选的分裂特征, 学习一棵决策树. 由于是放回抽样, 每个样本被选中的概率约等于 63\%, 因此每个样本会作为 37\% 的决策树的\textbf{袋外样本}. 对于每个样本 $x$, 用未使用 $x$ 训练的决策树对其进行预测, 以此计算每一个样本的预测值, 这样既可获得整个数据集上的袋外误差 (out-of-bag error);
+	
+	\item 重复直至达到终止条件;
+\end{itemize}
+
+显然, RF 的随机来自于样本抽样和特征抽样, 为什么要做这个呢? 尽量降低每棵树之间的相关性. Bagging 的集成学习一个关键之处就在于构建大量不同的学习器.
+
+RF 特点: 1) 能够处理高维数据, 即在分裂时选择一个特征子集; 2) 随机性使得 RF 有较强的鲁棒性; 3) 树的学习是可并行的; 4) 类别不平衡, 缺失值较多对模型的影响相对较小. 因为会对样本进行抽样, 可以一定程度上降低类别不平衡的影响; 5) 也因为随机性, 不好控制学习过程中使用的特征集合; 6) 数据集较小时, 随机的作用较小.
+
 \subsection{GMM}
 Gaussian Mixture Model, 高斯混合模型. 
 
