--- a/body/Math/chap01.tex
+++ b/body/Math/chap01.tex
@@ -510,3 +510,6 @@ $$
 \end{enumerate}
 
 感谢博客: \href{https://blog.csdn.net/u010025211/article/details/49668017}{使用rand5()生成rand7()}.
+
+\subsection{神经网络中的求导}
+参考资料: \href{https://web.stanford.edu/class/cs224n/readings/gradient-notes.pdf}{Computing Neural Network Gradients}.
