--- a/body/algorithms/basic.tex
+++ b/body/algorithms/basic.tex
@@ -50,3 +50,18 @@
 	         self.next = next
 \end{python}
 对于一个链表, 是可以包含多个节点的, 节点之间通过 \mintinline{python}{next} 指针相连, 即可以从一个节点沿着 \mintinline{python}{next} 遍历到下一个节点. 
+
+\subsection{布隆过滤器}
+布隆过滤器 (Bloom Filter) 是一个高空间利用率的概率性数据结构, 由一个二进制向量 (即位数组) 和一系列随机映射函数 (即哈希函数) 两部分组成, 能高效地查询一个元素是否在一个集合中 --- 这也是布隆过滤器的主要作用. 
+
+简单介绍一下它的工作原理. 如果用普通的线性数据结构, 如数组, 来检索一个元素是否存在时, 则需要遍历整个数据结构. 如何避免遍历呢? 借助哈希表, 构建值与存储位置的关系. 布隆过滤器就借助了哈希. 布隆过滤器包含一个数组和 $k$ 个哈希函数. 数组初始状态是全 0 的, 每个哈希函数为一个元素计算出一个索引值. 在插入 $x$ 时, $k$ 个哈希函数计算出 $k$ 个索引值, 将数组这 $k$ 个位置处的值置 1. 检索 $x$ 是否存在时, 先计算 $k$ 个索引, 若这些位置都为 1 则认为 $x$ 存在, 否则认为不存在.
+
+注意在检索时, 若 $k$ 个位置不都为 1 则肯定可以认为元素不存在. 但是, 都为 1时却不能保证 $x$ 一定存在, 即存在一定的误判率. 这个误判率和数组的长度 ($m$), 已添加的元素的数量 ($n$), 哈希函数的数量 ($k$) 的关系是什么呢? 
+
+假设选择的哈希函数的输出是等概率的. 那么插入一个元素时, 某个位置被一个哈希函数选中 (取 1) 的概率为 $\frac{1}{m}$, 不被选中 (取 0) 的概率为 $1 - \frac{1}{m}$, 则 $k$ 个哈希函数都没选中该位置的概率为 $(1 - \frac{1}{m})^k$. 如果插入了 $n$ 个元素, 该位置仍然为 0 的概率为 $(1 - \frac{1}{m})^{kn}$, 该位置为 1 的概率为 $1 - (1 - \frac{1}{m})^{kn}$. 误判的情况是 $x$ 对应的 $k$ 个位置已经被之前插入的 $n$ 个元素置 1 了, 这个概率是多大呢? \textbf{$(1 - (1 - \frac{1}{m})^{kn})^k \approx (1 - e^{- \frac{k n}{m}})^k$}.
+
+对于给定的 $m, n$, 使误判率最小时 $k = \frac{m}{n} \ln 2$. 令误判率为 $P_{fp}$, 对于给定的 $P_{fp}, n$, 最优的 $m = - \frac{n \ln P_{fp}}{(\ln 2)^2}$. 
+
+布隆过滤器的特点: 1) 相比哈希表, 空间和时间效率都很高; 2) \textcolor{red}{\textbf{能够准确地判断元素不存在}} (这一点可以加以应用, 哪些场景是需要判断不存在的情况, 这样就可以大大减少相应的开销, 即使会有一小撮误判存在的情况), 判断结果为存在时有一定的误报率; 3) 只能插入元素, 不能删除元素.
+
+应用场景: 1) 实现数据的去重, 但可能有一定的误报情况; 2) 数据库防止穿库. 可以把数据表的主键存进布隆过滤器中, 当查询数据时先检测是否存在该主键, 可以准确判断不存在的情况, 这样就能减少磁盘的 IO 操作. 该方法还可以解决缓存穿透的问题, 避免查询缓存中不存在的数据. 
